[package]
name = "dsp"
version = "0.8.2"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Digital Signal Processing"
keywords = ["dsp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/dsp"
homepage = "https://github.com/klangner/dsp"
documentation = "https://docs.rs/dsp"
edition = "2018"
autoexamples = false

[lib]
crate-type = ["rlib","cdylib", "staticlib"]

[features]
c-headers = ["safer-ffi/headers"]

[dependencies]
arraydeque = { version = "0.4", default-features = false }
itertools = "0.8"
num-complex = "0.2"
rustfft = "3"
rand = "0.6"
safer-ffi = { version = "0.0.6", features = ["proc_macros"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
gnuplot = "0.0.31"
clap = "2"
audrey = "0.3"
lewton = "0.9.4"
criterion = "0.2"
transpose = "0.2.0"
pitch_calc = "0.11"

[[bench]]
name = "gen_bench"
harness = false
